renamed urduNounsModal to urduAnimalsModal

--- a/src/app/shared/modal/modal.component.html
+++ b/src/app/shared/modal/modal.component.html
@@ -1,4 +1,4 @@
-<div #urduNounModal class="container">
+<div #urduAnimalsModal class="container">
   <div class="container-two">
     <div class="front flip" *ngFor="let urduNoun of urduNouns; let i = index">
       <div class="front">
