--- a/src/app/urdu-nouns/urdu-nouns.component.html
+++ b/src/app/urdu-nouns/urdu-nouns.component.html
@@ -2,7 +2,7 @@
 <div class="card-container">
   <div class="row">
     <div *ngFor="let type of types; let i = index" (click)="openNounModal()">
-      <div class="mat-card" *ngIf="i == 0" routerLink="Nouns">
+      <div class="mat-card" *ngIf="i == 0">
         <div class="card-image">
           <img src="https://i.redd.it/b3esnz5ra34y.jpg" />
         </div>
@@ -37,3 +37,5 @@
 </div>
 
 <app-modal #urduAnimalsModal></app-modal>
+<app-modal #openVerbModal></app-modal>
+<app-modal #openPhraseModal></app-modal>
