--- a/src/app/urdu-nouns/urdu-nouns.component.html
+++ b/src/app/urdu-nouns/urdu-nouns.component.html
@@ -1,8 +1,8 @@
 <h1 class="title">Pick a Card</h1>
 <div class="card-container">
   <div class="row">
-    <div *ngFor="let type of types; let i = index" (click)="openNounModal()">
-      <div class="mat-card" *ngIf="i == 0">
+    <div *ngFor="let type of types; let i = index">
+      <div class="mat-card" *ngIf="i == 0" (click)="openAnimalModal()">
         <div class="card-image">
           <img src="https://i.redd.it/b3esnz5ra34y.jpg" />
         </div>
@@ -11,7 +11,7 @@
         </div>
       </div>
 
-      <div class="mat-card" *ngIf="i == 1" (click)="openVerbModal()">
+      <div class="mat-card" *ngIf="i == 1" (click)="openFruitModal()">
         <div class="card-image">
           <img
             src="https://i.pinimg.com/originals/a5/45/38/a54538be5aa14b5af9b6446aa5fd2f7a.jpg"
@@ -22,7 +22,7 @@
         </div>
       </div>
 
-      <div class="mat-card" *ngIf="i == 2" (click)="openVerbModal()">
+      <div class="mat-card" *ngIf="i == 2">
         <div class="card-image">
           <img
             src="https://media.istockphoto.com/vectors/cartoon-winter-snowy-mountains-flat-landscape-with-pines-and-hills-vector-id1173793908?k=6&m=1173793908&s=170667a&w=0&h=o27CmT7ynWpQ4t55qzqDj_2y_8hx-9Bp3dum3o12Mas="
@@ -37,5 +37,4 @@
 </div>
 
 <app-modal #urduAnimalsModal></app-modal>
-<app-modal #openVerbModal></app-modal>
-<app-modal #openPhraseModal></app-modal>
+<app-modal #urduFruitModal></app-modal>
