--- a/src/app/urdu-nouns/urdu-nouns.component.html
+++ b/src/app/urdu-nouns/urdu-nouns.component.html
@@ -22,7 +22,7 @@
         </div>
       </div>
 
-      <div class="mat-card" *ngIf="i == 2">
+      <div class="mat-card" *ngIf="i == 2" (click)="openVehicleModal()">
         <div class="card-image">
           <img
             src="https://media.istockphoto.com/vectors/cartoon-winter-snowy-mountains-flat-landscape-with-pines-and-hills-vector-id1173793908?k=6&m=1173793908&s=170667a&w=0&h=o27CmT7ynWpQ4t55qzqDj_2y_8hx-9Bp3dum3o12Mas="
@@ -38,3 +38,4 @@
 
 <app-modal #urduAnimalsModal></app-modal>
 <app-modal #urduFruitModal></app-modal>
+<app-modal #urduVehicleModal></app-modal>
