nav-bar.component.html: add: added back button with hide__default class

--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -3,4 +3,7 @@
     <button routerLink="/home">Home</button>
   </div>
   <h1 class="header">{{ pageTitle }}</h1>
+  <div class="button-holder hide__default">
+    <button routerLink="/">Back</button>
+  </div>
 </div>
