nav-bar.component.html: add: if its homepage, the back button is given the class of hide__default

--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -3,7 +3,7 @@
     <button routerLink="/home">Home</button>
   </div>
   <h1 class="header">{{ pageTitle }}</h1>
-  <div class="button-holder" [ngClass]="{ hide__default: !homepage }">
+  <div class="button-holder" [ngClass]="{ hide__default: homepage }">
     <button routerLink="/">Back</button>
   </div>
 </div>
