urdu.component.html: add: changed the verb button from opening modal to linked to the /Verbs page

--- a/src/app/urdu/urdu.component.html
+++ b/src/app/urdu/urdu.component.html
@@ -10,7 +10,7 @@
           <p>{{ category.category }}</p>
         </div>
       </div>
-      <div class="mat-card" *ngIf="i == 1" (click)="openVerbModal()">
+      <div class="mat-card" *ngIf="i == 1" routerLink="Verbs">
         <div class="card-image">
           <img
             src="https://i.pinimg.com/originals/a5/45/38/a54538be5aa14b5af9b6446aa5fd2f7a.jpg"
